# mnemo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: METHOD.md
experiments/: compare_detectors.py  dataset_inference_demo.py  finetune_probe_demo.py  reproduce_pythia.py
src/mnemo/: __init__.py
src/mnemo/cli/: __init__.py  main.py
src/mnemo/core/: __init__.py  detector.py  result.py  scoring.py  statistics.py
src/mnemo/datasets/: __init__.py  benchmarks.py  loaders.py
src/mnemo/detectors/: __init__.py  codec.py  factories.py  max_k.py  min_k.py  perplexity.py  perturbation_loss.py  reference_loss.py  vanilla_loss.py  zlib_ratio.py
src/mnemo/models/: __init__.py  base.py  hf.py
src/mnemo/pipelines/: __init__.py  auc_eval.py  dataset_inference.py  detection.py  finetune_probe.py
src/mnemo/utils/: __init__.py  cache.py  plotting.py
tests/: conftest.py  test_cache.py  test_cli.py  test_dataset_inference.py  test_detectors.py  test_factories.py  test_loaders.py  test_perturbation_loss.py  test_pipeline.py  test_reference_loss.py  test_scoring.py  test_statistics.py
